# Automaton-Auditor

./: .env.example  README.md  TESTING_GUIDE.md  pyproject.toml  rubric.json  test_detectives.py  test_graph.py
reports/: peer_audit_report.md  self_audit_report.md
src/: graph.py  state.py
src/nodes/: detectives.py  judges.py
src/tools/: doc_tools.py  repo_tools.py
